2+3批次优化，未debug
